Bug 73807 - Xwayland move/resize is flaky with Weston multi seat
Summary: Xwayland move/resize is flaky with Weston multi seat
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: XWayland (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-19 19:27 UTC by nerdopolis1
Modified: 2014-04-30 23:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description nerdopolis1 2014-01-19 19:27:50 UTC
It seems that if I have default, and seat0, if I try to resize or move an xwayland window with seat0, the pointer for the default seat gets locked as the one doing the resize, and then I have to unlock it by clicking the mouse tied to default.
Comment 1 Kristian Høgsberg 2014-04-30 23:11:23 UTC
commit 052ef4e7bcd8929b5bceafa2beb76be43fc32822
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Apr 30 16:10:14 2014 -0700

    xwayland: Be smarter about picking seats for move/resize
    
    If we're going to move or resize an xwayland surface, we used to just
    pick the first seat in the list for doing the move/resize.  Ideally we
    can map from the XInput device doing the click to the corresponding
    weston_seat, but that requires using xcb xinput, which isn't well supported.
    
    Instead, lets use a simple heuristic that just picks the pointer that
    most recently delivered a button event to the window in question.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=73807


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.